fix: make some fixes to use grid properly and align some items in the cart

--- a/src/components/Cart/CartItems/CartItems.module.scss
+++ b/src/components/Cart/CartItems/CartItems.module.scss
@@ -28,6 +28,7 @@
     align-items: center;
     text-decoration: none;  
     height: 100%;
+    width: 350px;
 }
 
 .cart-item__image {
@@ -63,6 +64,7 @@
 .cart-item__quaintity {
     font-size: 0.8rem;
     color: $light-text;
+    align-self: flex-start;
 }
 
 .cart-item__counter {
@@ -88,4 +90,5 @@
 
 .cart-item__price {
     padding-right: 2rem;
+    width: 110px;
 }
