--- a/src/components/PageMain/PageMain.module.scss
+++ b/src/components/PageMain/PageMain.module.scss
@@ -5,7 +5,6 @@
 }
 
 .main__container {
-    display: flex;
     max-width: $desktop;
     margin-right: auto;
     margin-left: auto;
@@ -13,8 +12,7 @@
     padding-left: 15px;
 }
 
-.content {
-    width: 100%;
-    // display: grid;
-    // grid-template-columns: 0.75fr 3fr;
+.main-grid {
+    display: grid;
+    grid-template-columns: 0.75fr 3fr;
 }
