--- a/src/components/PageMain/components/MainCatalog/MainCatalog.module.scss
+++ b/src/components/PageMain/components/MainCatalog/MainCatalog.module.scss
@@ -1,7 +1,6 @@
 @import '/src/theme/variable';
 
 .catalog {
-    height: 100%;
     padding-bottom: 2rem;
     display: flex;
 }
